add_subdirectory(clock)
add_subdirectory(colors)
add_subdirectory(desktopthemedetails)
add_subdirectory(joystick)
add_subdirectory(kcmaccess)
add_subdirectory(kcmstyle)
add_subdirectory(solid-actions)
add_subdirectory(splashscreen)
add_subdirectory(bookmarks)
add_subdirectory(icons)
add_subdirectory(cookies)
add_subdirectory(ebrowsing)
add_subdirectory(useragent)
add_subdirectory(khtml-general)
add_subdirectory(khtml-plugins)
add_subdirectory(khtml-java-js)
add_subdirectory(khtml-behavior)
add_subdirectory(khtml-adblock)
add_subdirectory(attica)
add_subdirectory(emoticons)

if ( Q_WS_X11 )
    add_subdirectory(autostart)
    add_subdirectory(bell)
    add_subdirectory(cursortheme)
    add_subdirectory(fonts)
    add_subdirectory(fontinst)
    add_subdirectory(keys)
    add_subdirectory(keyboard)
    add_subdirectory(mouse)
    add_subdirectory(paths)
    add_subdirectory(kcmsmserver)
    add_subdirectory(cache)
    add_subdirectory(filemanager)
    add_subdirectory(filetypes)
    add_subdirectory(kcmcss)
    add_subdirectory(kcmlaunch)
    add_subdirectory(kcmnotify)
    add_subdirectory(language)
    add_subdirectory(netpref)
    add_subdirectory(performance)
    add_subdirectory(proxy)
    add_subdirectory(spellchecking)
    add_subdirectory(componentchooser)
    add_subdirectory(kded)
    add_subdirectory(history)
    add_subdirectory(solid-device-automounter)
    add_subdirectory(phonon)
endif ()

if ( NOT Q_WS_WIN )
    add_subdirectory(smb)
endif ()

